Updated PackageDocumentation, some fixes in the  PlainTextOutputTarget

--- a/jfreereport/source/com/jrefinery/report/io/ext/factory/templates/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/ext/factory/templates/package.html
@@ -3,5 +3,8 @@
 <body bgcolor="white">
 The {@link com.jrefinery.report.io.ext.factory.templates.TemplateDescription}
 interface and related classes.
+<p>
+Templates are Facade implementations for the low level DataSources. Templates implement
+the common use-cases for DataSources.
 </body>
 </html>
