--- a/jfreereport/source/org/jfree/report/demo/layouts/shape-and-drawable.xml
+++ b/jfreereport/source/org/jfree/report/demo/layouts/shape-and-drawable.xml
@@ -8,7 +8,7 @@
 <report name="Shape and Drawable Demo" orientation="portrait" pageformat="LETTER" topmargin="72" leftmargin="72" bottommargin="72" rightmargin="72">
 
   <reportheader height="60">
-    <rectangle x="0" y="0" width="100%" height="100" color="blue" draw="true" fill="false"/>
+    <rectangle x="0" y="0" width="100%" height="100" color="blue" draw="true" fill="false" stroke-style="dotted"/>
     <rectangle x="15" y="15" width="100" height="25" color="yellow"/>
     <shape-field x="15" y="15" width="100%" height="30" fieldname="shapecreator" color="green"/>
     <label name="Label1" x="15" y="15" width="100%" height="20" vertical-alignment="top">Hello World :)</label>
