--- a/jfreereport/source/org/jfree/report/demo/layouts/shape-and-drawable.xml
+++ b/jfreereport/source/org/jfree/report/demo/layouts/shape-and-drawable.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <!DOCTYPE report PUBLIC "-//JFreeReport//DTD report definition//EN//simple/version 0.8.5"
                         "http://jfreereport.sourceforge.net/report-085.dtd">
-<!--
-  The Drawable and Shape-Elements are experimental and no official part of the
-  0.8.1 release. These are features of the upcomming 0.8.2 release.
--->
+
 <report name="Shape and Drawable Demo" orientation="portrait" pageformat="LETTER" topmargin="72" leftmargin="72" bottommargin="72" rightmargin="72">
 
   <reportheader height="60">
@@ -15,6 +12,28 @@
     <label name="Label2" x="115" y="30" width="100%" height="20" vertical-alignment="top">I love shapes :)</label>
   </reportheader>
 
+  <groups>
+    <group name="default">
+      <fields></fields>
+      <groupheader>
+        <line x1="0" y1="6" x2="45%" y2="6" weight="1" stroke-style="solid"/>
+        <label x="50%" y="0" width="50%" height="12">solid</label>
+        <line x1="0" y1="18" x2="45%" y2="18" weight="1" stroke-style="dashed"/>
+        <label x="50%" y="12" width="50%" height="12">dashed</label>
+        <line x1="0" y1="30" x2="45%" y2="30" weight="1" stroke-style="dotted"/>
+        <label x="50%" y="24" width="50%" height="12">dotted</label>
+        <line x1="0" y1="42" x2="45%" y2="42" weight="1" stroke-style="dot-dash"/>
+        <label x="50%" y="36" width="50%" height="12">dot-dash</label>
+        <line x1="0" y1="54" x2="45%" y2="54" weight="1" stroke-style="dot-dot-dash"/>
+        <label x="50%" y="48" width="50%" height="12">dot-dot-dash</label>
+      </groupheader>
+    </group>
+  </groups>
+
+  <no-data-band>
+    <label x="25%" y="48" width="50%" height="12">This report does not contain any other data.</label>
+  </no-data-band>
+  
   <reportfooter height="50">
     <drawable-field x="15" y="15" width="100%" height="30" fieldname="drawable"/>
   </reportfooter>
