--- a/jfreereport/source/org/jfree/report/modules/factories/report/flow/flow.css
+++ b/jfreereport/source/org/jfree/report/modules/factories/report/flow/flow.css
@@ -37,24 +37,24 @@ content[report|content][report|isDate=true] {
   content: format(attr("report|content", date), date);
 }
 
-content[report|content][report|isDate=true][report|format] {
-  content: format(attr("report|content", date), date, attr("report|format",string));
+content[report|content][report|isDate=true][format] {
+  content: format(attr("report|content", date), date, attr("format",string));
 }
 
 content[report|content][report|isNumber=true] {
   content: format(attr("report|content", number), number, "#,##0.00");
 }
 
-content[report|content][report|isNumber=true][report|format] {
-  content: format(attr("report|content", number), number, attr("report|format",string));
+content[report|content][report|isNumber=true][format] {
+  content: format(attr("report|content", number), number, attr("format",string));
 }
 
-content[report|content][report|isNumber=true][report|isInteger=true] {
+content[report|content][report|isNumber=true][isInteger=true] {
   content: format(attr("report|content", number), number, "#,##0");
 }
 
-content[report|content][report|isNumber=true][report|isInteger=true][format] {
-  content: format(attr("report|content", number), number, attr("report|format",string));
+content[report|content][report|isNumber=true][isInteger=true][format] {
+  content: format(attr("report|content", number), number, attr("format",string));
 }
 
 inner-stylesheet {
