--- a/jfreereport/source/org/jfree/report/engine.css
+++ b/jfreereport/source/org/jfree/report/engine.css
@@ -6,6 +6,14 @@
 @namespace report url(http://jfreereport.sourceforge.net/namespaces/engine);
 @namespace url(http://jfreereport.sourceforge.net/namespaces/engine);
 
+/**
+ * Everything except the content element is now considered a block-level element.
+ * This looks like a sane default to me.
+* {
+  display: block;
+}
+ */
+
 content {
   content: attr("report|content");
   display: inline;
@@ -34,3 +42,4 @@ content[report|isNumber=true][report|isInteger=true] {
 content[report|isNumber=true][report|isInteger=true][format] {
   content: format(attr("report|content", number), number, attr("format",string));
 }
+
